--- a/Adota.Pet/appsettings.Development.json
+++ b/Adota.Pet/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AppDb": "Host=localhost;Port=5432;Username=postgres;Password=postgres;Database=adota_pet_dev"
   }
 }
